--- a/css/normalize.css
+++ b/css/normalize.css
@@ -45,6 +45,7 @@ body {
   color: #fff;
   margin: 0;
   padding: 0;
+  /* width: 1660px; */
 }
 
 /**
@@ -376,7 +377,7 @@ template {
 }
 
 .container {
-  max-width: calc(var(--container) + var(--padding-container) * 2);
+  width: calc(var(--container) + var(--padding-container) * 2);
   padding: 0 var(--padding-container);
   margin: 0 auto;
 }
