--- a/css/default.css
+++ b/css/default.css
@@ -1,46 +1,37 @@
-
-
-*, *::before, *::after {
-    box-sizing: inherit;
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
 }
 body {
-   
 }
 
-img, svg {
-    max-width: 100%;
-    max-height: 100%;
-    height: auto;
+img,
+svg {
+  max-width: 100%;
+  max-height: 100%;
+  height: auto;
 }
 
 button {
-    padding: 0;
-    border: none;
-    cursor: pointer;
-    background-color: transparent;
-}
-
-a, a:visited {
-    text-decoration: none;
-}
-
-a:focus, a:active {
-    text-decoration: none;
-    color: inherit;
+  padding: 0;
+  border: none;
+  cursor: pointer;
+  background-color: transparent;
 }
 
 ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
-h1, h2, h3, p, figure {
-    font-size: inherit;
-    line-height: inherit;
-    margin: 0;
+h1,
+h2,
+h3,
+p,
+figure {
+  font-size: inherit;
+  line-height: inherit;
+  margin: 0;
 }
-
-
-
-  
