--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,12 @@
-@import url(/css/normalize.css);
+@import url(./css/normalize.css);
+@import url(./default.css);
 
 /* Секция Header - навигация и заголовок */
 .header {
   background-image: url(../img/rock-731140_1920-1.png);
   background-size: cover;
   background-color: #000000;
-  width: 1920px;
+  width: 1660px;
 
   margin: 0 auto;
   position: relative;
@@ -62,7 +63,6 @@
 }
 
 .main__heading {
-  font-family: inherit;
   font-size: 4.5rem;
   font-weight: 700;
 
@@ -80,7 +80,7 @@
 
 /* Сейчас в тренде */
 .trends {
-  width: 1920px;
+  width: 1660px;
   margin: 0 auto 60px auto;
 }
 
@@ -119,7 +119,7 @@
 
 .trend__container {
   background-color: var(--color_substrate);
-  width: calc((100% - 5px) / 4);
+  min-width: calc((100% - 5px) / 4);
   position: relative;
 }
 
@@ -142,12 +142,13 @@
 .category {
   border: 3px solid var(--color_fonts);
   position: absolute;
+  width: calc(100% - 40px);
 
-  right: 20px;
+  bottom: 20px;
   left: 20px;
-  bottom: 15px;
+  right: 20px;
 
-  padding: 40px 105px 35px 30px;
+  padding: 35px;
 }
 
 .trend__сategory {
@@ -198,7 +199,7 @@
 
 .list__post {
   display: flex;
-  min-width: 800px;
+  max-width: 800px;
 }
 
 .list__post:not(:last-child) {
@@ -250,7 +251,7 @@
   color: #000000;
   font-weight: 700;
 
-  margin-left: 15px;
+  margin-left: 1.2rem;
 }
 
 .list__post-article {
@@ -285,7 +286,7 @@
 }
 
 .new__post-text {
-  font-size: 14px;
+  font-size: 1.4rem;
   font-weight: 700;
   color: #000;
   text-transform: uppercase;
@@ -365,7 +366,7 @@
 
 .container__search-btn::after {
   content: "";
-  background-image: url(./icon/search.svg);
+  background-image: url(../icon/search.svg);
   position: absolute;
   top: 0;
   right: 0;
@@ -596,7 +597,7 @@
 }
 
 .products__title {
-  font-size: 2.2rem;
+  font-size: 2rem;
   color: rgb(15, 13, 14);
   font-weight: bold;
   text-transform: uppercase;
@@ -607,7 +608,6 @@
   font-size: 1.5rem;
   color: rgb(15, 13, 14);
   opacity: 0.8;
-  line-height: 1.467;
   padding-bottom: 35px;
 }
 
@@ -692,7 +692,7 @@
   content: "";
   width: 20px;
   height: 20px;
-  background-image: url(./icon/001-dribbble.svg);
+  background-image: url(../icon/001-dribbble.svg);
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -701,7 +701,7 @@
   content: "";
   width: 20px;
   height: 20px;
-  background-image: url(./icon/001-pinterest.svg);
+  background-image: url(../icon/001-pinterest.svg);
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -710,7 +710,7 @@
   content: "";
   width: 20px;
   height: 20px;
-  background-image: url(./icon/003-tumblr.svg);
+  background-image: url(../icon/003-tumblr.svg);
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -729,14 +729,30 @@
 }
 
 /* Popup ОКНО */
+.www {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+
+  background-color: rgba(0, 0, 0, 0.5);
+
+  /* скрываю POPUP */
+  opacity: 0;
+}
+
 .wrapper__popup {
-  opacity: 1;
   display: flex;
   flex-direction: column;
 
   color: #000;
-  margin: 0 auto;
-  max-width: 300px;
+  margin: 100px auto;
+  padding: 30px;
+  max-width: 390px;
+  height: 590px;
+  background-color: #fff;
 }
 
 .title__popup {
@@ -778,8 +794,9 @@
 .site__visit-list {
   -webkit-appearance: none;
   -moz-appearance: none;
+  appearance: none;
 
-  background-image: url(./icon/form-arrows.svg);
+  background-image: url(../icon/form-arrows.svg);
   background-repeat: no-repeat;
   background-size: 10px;
   background-position: right 10px center;
@@ -800,7 +817,6 @@
 .site__visit-list:focus {
   outline: 1px solid rgb(181, 159, 91);
 }
-
 .email__delivery {
   display: flex;
   flex-direction: column;
@@ -859,87 +875,43 @@
   display: inline-block;
 }
 
-
-
-
-
-
-
-
-
-.popup {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-
-  background: rgba(0, 0, 0, 0.5);
-  display: none;
-}
-
-.popup__toggle {
-  display: none;
-}
-
-.popup__toggle:checked + .popup {
+.comment {
   display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
-.popup__content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-
-  z-index: 2;
-
-  background: #fff;
-
-  width: 400px;
-  height: 400px;
-  padding: 20px;
-
-  box-sizing: border-box;
-  border-radius: 5px;
-
-  transform: translate(-50%, -50%);
+.content__wishes {
+  font-size: 1.4rem;
+  line-height: 1.2;
+}
+.comment__text {
+  background-color: rgb(244, 247, 246);
+  width: 331px;
+  height: 132px;
+}
+.comment__text:focus {
+  outline: 1px solid var(--color_fonts);
 }
 
-.popup__close {
-  position: absolute;
-  color: #fff;
-  font-size: 40px;
-  right: -20px;
-  top: -50px;
-
-  cursor: pointer;
+.comment__text::placeholder {
+  font-size: 1.4rem;
+  color: rgba(0, 0, 0, 0.541);
+  line-height: 1.2;
+  padding-top: 20px;
+  padding-left: 20px;
 }
 
-.popup__close:hover {
-  color: lightgray;
-}
-
-.popup__close--bg {
-  position: absolute;
+.popup__btn {
+  background-color: var(--color_fonts);
   width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  z-index: 1;
+  height: 50px;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #fff;
+  text-transform: uppercase;
 }
 
-.btn {
-  display: inline-block;
-  padding: 10px;
-  min-width: 100px;
-  height: 20px;
-  background: red;
-  color: #fff;
-
-  cursor: pointer;
-
-  border-radius: 10px;
-
-  box-shadow: 2px 2px 10px #000;
-  margin: 10px;
+.popup__btn:hover {
+  background-color: rgb(50, 50, 50);
 }
