--- a/css/default.css
+++ b/css/default.css
@@ -3,8 +3,6 @@
 *::after {
   box-sizing: inherit;
 }
-body {
-}
 
 img,
 svg {
@@ -35,3 +33,15 @@ figure {
   line-height: inherit;
   margin: 0;
 }
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:hover,
+a:focus,
+a:active {
+  text-decoration: underline;
+}
+
