--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,13 @@
-@import url(./css/normalize.css);
-@import url(./default.css);
+@import url(../css/normalize.css);
+@import url(../css/default.css);
+
+:root {
+  --container: 1170px;
+  --padding-container: 15px;
+  --color_fonts: rgb(181, 159, 91);
+  --color_mask: rgba(0, 0, 0, 0.6);
+  --color_substrate: rgb(239, 246, 241);
+}
 
 /* Секция Header - навигация и заголовок */
 .header {
@@ -22,7 +30,6 @@
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 0;
 
   z-index: -1;
 }
@@ -61,21 +68,29 @@
   color: #fff;
   text-decoration: underline;
 }
+.burger__menu {
+  display: none;
+}
+
+.burger__line {
+  width: 23px;
+  height: 4px;
+  background-color: rgb(255, 255, 255);
+}
 
 .main__heading {
+  max-width: 690px;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.title {
   font-size: 4.5rem;
   font-weight: 700;
 
   line-height: 1.666;
   text-transform: uppercase;
-
-  padding: 10rem 0 14rem 0;
-}
-
-.title {
-  max-width: 69rem;
-  text-align: center;
-  margin: 0 auto;
+  padding: 100px 0 140px 0;
 }
 
 /* Сейчас в тренде */
@@ -211,7 +226,7 @@
   background-size: cover;
   display: block;
   height: 100%;
-  min-width: 380px;
+  width: 380px;
 
   color: #000000;
   font-size: 2rem;
@@ -258,7 +273,9 @@
   font-size: 1.5rem;
   color: rgb(15, 13, 14);
   line-height: 1.467;
-  padding-bottom: 65px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 /* САЙТБАР - НОВЫЕ ПОСТЫ*/
@@ -729,8 +746,7 @@
 }
 
 /* Popup ОКНО */
-.www {
-  position: fixed;
+.popup {
   width: 100%;
   height: 100vh;
   left: 50%;
@@ -740,6 +756,7 @@
   background-color: rgba(0, 0, 0, 0.5);
 
   /* скрываю POPUP */
+  /* position: fixed; */
   opacity: 0;
 }
 
