--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@
   justify-content: space-between;
   align-items: center;
 
-  padding-top: 3rem;
+  padding-top: 30px;
   box-sizing: border-box;
 }
 
@@ -54,14 +54,14 @@
 
 .header__link {
   font-family: inherit;
-  font-size: 1.3rem;
+  font-size: 13px;
   font-weight: 400;
 
   color: #cacaca;
 
   text-decoration: none;
   text-transform: uppercase;
-  padding-left: 3.5rem;
+  padding-left: 35px;
 }
 
 .header__link:hover {
@@ -85,7 +85,7 @@
 }
 
 .title {
-  font-size: 4.5rem;
+  font-size: 45px;
   font-weight: 700;
 
   line-height: 1.666;
@@ -100,7 +100,7 @@
 }
 
 .trend__title {
-  font-size: 2rem;
+  font-size: 20px;
   font-weight: 700;
   color: rgb(15, 13, 14);
   text-align: center;
@@ -151,7 +151,7 @@
   width: auto;
   height: 100%;
   color: #000000;
-  font-size: 2rem;
+  font-size: 20px;
 }
 
 .category {
@@ -171,7 +171,7 @@
 }
 
 .category__link {
-  font-size: 1.4rem;
+  font-size: 14px;
   font-weight: bold;
   text-transform: uppercase;
   color: var(--color_fonts);
@@ -187,7 +187,7 @@
 }
 
 .title__category-link {
-  font-size: 2rem;
+  font-size: 20px;
   font-weight: 700;
   line-height: 1.2;
   color: #fff;
@@ -226,10 +226,10 @@
   background-size: cover;
   display: block;
   height: 100%;
-  width: 380px;
+  min-width: 380px;
 
   color: #000000;
-  font-size: 2rem;
+  font-size: 20px;
 }
 
 .list__post-section {
@@ -240,7 +240,7 @@
 }
 
 .list__post-text {
-  font-size: 2rem;
+  font-size: 20px;
   font-weight: 700;
   color: #000;
   line-height: 1.2;
@@ -257,7 +257,7 @@
 
 .list__post-time {
   color: #888888;
-  font-size: 1.2rem;
+  font-size: 12px;
 
   padding-bottom: 50px;
 }
@@ -266,11 +266,11 @@
   color: #000000;
   font-weight: 700;
 
-  margin-left: 1.2rem;
+  margin-left: 12px;
 }
 
 .list__post-article {
-  font-size: 1.5rem;
+  font-size: 15px;
   color: rgb(15, 13, 14);
   line-height: 1.467;
   display: flex;
@@ -303,7 +303,7 @@
 }
 
 .new__post-text {
-  font-size: 1.4rem;
+  font-size: 14px;
   font-weight: 700;
   color: #000;
   text-transform: uppercase;
@@ -335,14 +335,14 @@
 }
 
 .time__text {
-  font-size: 1.2rem;
+  font-size: 12px;
   color: rgba(0, 0, 0, 0.541);
   margin-bottom: 10px;
 }
 
 .title__link {
   color: #000;
-  font-size: 1.4rem;
+  font-size: 14px;
   font-weight: 700;
   text-transform: uppercase;
 }
@@ -357,7 +357,7 @@
   width: 100%;
   height: 40px;
   background-color: rgb(244, 247, 246);
-  font-size: 1.3rem;
+  font-size: 13px;
   color: #000;
   padding-left: 20px;
   border: none;
@@ -404,7 +404,7 @@
 }
 
 .title__mailing {
-  font-size: 1.4rem;
+  font-size: 14px;
   font-weight: 700;
   color: #000;
   text-transform: uppercase;
@@ -473,7 +473,7 @@
 }
 
 .title__tag {
-  font-size: 1.4rem;
+  font-size: 14px;
   font-weight: 700;
   color: #000;
   text-transform: uppercase;
@@ -510,7 +510,7 @@
 }
 
 .tag__link {
-  font-size: 1.2rem;
+  font-size: 12px;
   font-weight: 700;
   text-transform: uppercase;
   text-decoration: none;
@@ -533,7 +533,7 @@
 }
 
 .title__subject {
-  font-size: 1.4rem;
+  font-size: 14px;
   font-weight: 700;
   color: #000;
   text-transform: uppercase;
@@ -569,7 +569,7 @@
 }
 
 .subject__link {
-  font-size: 1.4rem;
+  font-size: 14px;
   font-weight: 700;
   text-decoration: none;
   color: #000;
@@ -580,7 +580,7 @@
 }
 
 .uppercase {
-  font-size: 1.2rem;
+  font-size: 12px;
   color: var(--color_fonts);
   font-weight: 700;
   padding-left: 5px;
@@ -602,7 +602,7 @@
 
 .products__img img {
   color: #000000;
-  font-size: 2rem;
+  font-size: 20px;
   padding: 0 20px;
 }
 
@@ -614,7 +614,7 @@
 }
 
 .products__title {
-  font-size: 2rem;
+  font-size: 20px;
   color: rgb(15, 13, 14);
   font-weight: bold;
   text-transform: uppercase;
@@ -622,7 +622,7 @@
 }
 
 .products__text {
-  font-size: 1.5rem;
+  font-size: 15px;
   color: rgb(15, 13, 14);
   opacity: 0.8;
   padding-bottom: 35px;
@@ -648,7 +648,7 @@
 }
 
 .price {
-  font-size: 1.5rem;
+  font-size: 15px;
   color: rgb(15, 13, 14);
   font-weight: bold;
   text-transform: uppercase;
@@ -663,7 +663,7 @@
 }
 
 .new__price {
-  font-size: 2.2rem;
+  font-size: 22px;
   text-decoration: none;
 }
 
@@ -672,7 +672,7 @@
   width: 141px;
   height: 49px;
 
-  font-size: 1.5rem;
+  font-size: 15px;
   color: #fff;
   font-weight: bold;
   text-transform: uppercase;
@@ -739,7 +739,7 @@
 }
 
 .copyright {
-  font-size: 1.2rem;
+  font-size: 12px;
   color: #999999;
   font-weight: 700;
   text-decoration: none;
@@ -756,8 +756,8 @@
   background-color: rgba(0, 0, 0, 0.5);
 
   /* скрываю POPUP */
-  /* position: fixed; */
-  opacity: 0;
+  position: absolute;
+  opacity: 0; /*нужно поменять на 1*/
 }
 
 .wrapper__popup {
@@ -773,7 +773,7 @@
 }
 
 .title__popup {
-  font-size: 2rem;
+  font-size: 20px;
   font-weight: 700;
   color: rgb(15, 13, 14);
   text-align: center;
@@ -804,7 +804,7 @@
 }
 
 .site__visit {
-  font-size: 1.4rem;
+  font-size: 14px;
   line-height: 3;
 }
 
@@ -827,7 +827,7 @@
   border: none;
   background-color: rgb(244, 247, 246);
 
-  font-size: 1.4rem;
+  font-size: 14px;
   color: #333333;
 }
 
@@ -841,7 +841,7 @@
 }
 
 .email__title {
-  font-size: 1.4rem;
+  font-size: 14px;
   line-height: 1.2;
 }
 
@@ -850,7 +850,7 @@
   gap: 15px;
 }
 .choice__label {
-  font-size: 1.4rem;
+  font-size: 14px;
   line-height: 1.2;
 }
 
@@ -899,7 +899,7 @@
 }
 
 .content__wishes {
-  font-size: 1.4rem;
+  font-size: 14px;
   line-height: 1.2;
 }
 .comment__text {
@@ -912,7 +912,7 @@
 }
 
 .comment__text::placeholder {
-  font-size: 1.4rem;
+  font-size: 14px;
   color: rgba(0, 0, 0, 0.541);
   line-height: 1.2;
   padding-top: 20px;
@@ -923,7 +923,7 @@
   background-color: var(--color_fonts);
   width: 100%;
   height: 50px;
-  font-size: 1.5rem;
+  font-size: 15px;
   font-weight: bold;
   color: #fff;
   text-transform: uppercase;
